; ModuleID = '/home/carl/AnghaBench/timescaledb/src/extr_hypertable.c_ts_hypertable_lock_tuple.c'
source_filename = "/home/carl/AnghaBench/timescaledb/src/extr_hypertable.c_ts_hypertable_lock_tuple.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@tuple_found_lock = common dso_local global i32 0, align 4
@RowExclusiveLock = common dso_local global i32 0, align 4
@ERROR = common dso_local global i32 0, align 4
@ERRCODE_TS_HYPERTABLE_NOT_EXIST = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [31 x i8] c"table \22%s\22 is not a hypertable\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ts_hypertable_lock_tuple(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = call i32 @get_rel_namespace(i32 %5)
  %7 = call i32 @get_namespace_name(i32 %6)
  %8 = load i32, i32* %2, align 4
  %9 = call i32 @get_rel_name(i32 %8)
  %10 = load i32, i32* @tuple_found_lock, align 4
  %11 = load i32, i32* @RowExclusiveLock, align 4
  %12 = call i32 @hypertable_scan(i32 %7, i32 %9, i32 %10, i32* %3, i32 %11, i32 1)
  store i32 %12, i32* %4, align 4
  %13 = load i32, i32* %4, align 4
  %14 = icmp ne i32 %13, 1
  br i1 %14, label %15, label %23

15:                                               ; preds = %1
  %16 = load i32, i32* @ERROR, align 4
  %17 = load i32, i32* @ERRCODE_TS_HYPERTABLE_NOT_EXIST, align 4
  %18 = call i32 @errcode(i32 %17)
  %19 = load i32, i32* %2, align 4
  %20 = call i32 @get_rel_name(i32 %19)
  %21 = call i32 @errmsg(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0), i32 %20)
  %22 = call i32 @ereport(i32 %16, i32 %21)
  br label %23

23:                                               ; preds = %15, %1
  %24 = load i32, i32* %3, align 4
  ret i32 %24
}

declare dso_local i32 @hypertable_scan(i32, i32, i32, i32*, i32, i32) #1

declare dso_local i32 @get_namespace_name(i32) #1

declare dso_local i32 @get_rel_namespace(i32) #1

declare dso_local i32 @get_rel_name(i32) #1

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errcode(i32) #1

declare dso_local i32 @errmsg(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
